src/components/Register/styles.scss
@import url('https://fonts.googleapis.com/css?family=Russo+One&display=swap');

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}

#background {
    height: 1000px;
    width: 100%;
    background-image: url('../../assets/images/league-bg');
}

#register-area {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    width: 600px;
    height: 575px;
    background-color: rgba(22, 20, 20, 0.67);
}

#register-area form {
    width: 80%;
    height: 50px;
}

h1 {
    font-family: Russo One;
    font-style: normal;
    font-weight: normal;
    font-size: 40px;
    line-height: 60px;
    text-align: center;
    color: #FFFFFF;
    margin: 10px;
}

#icon {
    margin-right: 15px;
}

button {
    width: 100%;
    height: 100%;
    border: 2px solid white;
    background-color: #24283B;
    font-family: Verdana;
    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    color: #FFFFFF;
}

#hr-line {
    width: 20%;
}

hr {
    border: 1px solid white;
}

#have-account {
    font-family: Verdana;
    font-style: normal;
    font-weight: bold;
    font-size: 14px;
    text-decoration: none;
    color: #FFFFFF;
}

#terms {
    margin-bottom: 20px;
}

#terms p {
    font-family: Verdana;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    color: #ADBAC9;
}

#terms a {
    font-family: Verdana;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    text-decoration: none;
    color: #FFFFFF;
}

